--- a/Tests/blinkTest/CMakeLists.txt
+++ b/Tests/blinkTest/CMakeLists.txt
@@ -78,7 +78,11 @@ set(SYSTEM_SRC
     ${ROOT}/System/uart1.hpp
     ${ROOT}/System/uart2.cpp
     ${ROOT}/System/uart2.hpp
-    ${ROOT}/System/uartCallbacks.cpp
+    ${ROOT}/System/uartIsrHandler.cpp
+    ${ROOT}/System/uartInterface.hpp
+    ${ROOT}/System/stream.hpp
+    ${ROOT}/System/uartStream.hpp
+    ${ROOT}/System/uartStream.cpp
     ${ROOT}/System/gpio.cpp
     ${ROOT}/System/gpio.hpp
 
