--- a/Tests/blinkTest/CMakeLists.txt
+++ b/Tests/blinkTest/CMakeLists.txt
@@ -38,6 +38,8 @@ set(SYSTEM_SRC
     ${ROOT}/System/MSP/STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_uart.c
     ${ROOT}/System/MSP/STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_uart_ex.c
     ${ROOT}/System/MSP/STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_dma.c
+    ${ROOT}/System/MSP/STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_i2s.c
+    ${ROOT}/System/MSP/STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_i2s_ex.c
 
 # RTOS (Real-Time Operating System)
 
@@ -82,13 +84,10 @@ set(SYSTEM_SRC
     ${ROOT}/System/uart1.hpp
     ${ROOT}/System/uart2.cpp
     ${ROOT}/System/uart2.hpp
-    ${ROOT}/System/uartIsrHandler.cpp
-    ${ROOT}/System/uartInterface.hpp
-    ${ROOT}/System/stream.hpp
-    ${ROOT}/System/uartStream.hpp
-    ${ROOT}/System/uartStream.cpp
-    ${ROOT}/System/gpio.cpp
-    ${ROOT}/System/gpio.hpp
+    ${ROOT}/System/i2sInterface.hpp
+    ${ROOT}/System/i2sIsrHandler.cpp
+    ${ROOT}/System/i2s2.cpp
+    ${ROOT}/System/i2s2.hpp
 
     # FibSys (Fibration System)
     ${ROOT}/System/FreeRTOSConfig.h # FreeRTOS project specific configuration
