Renaming current `stream` to more logical `textStream`.

--- a/Tests/blinkTest/CMakeLists.txt
+++ b/Tests/blinkTest/CMakeLists.txt
@@ -71,29 +71,35 @@ set(SYSTEM_SRC
 # Fibration Framework
 
     # Hardware Peripheral Interface
+
     ${ROOT}/System/memory.cpp
     ${ROOT}/System/peripherals.cpp
     ${ROOT}/System/peripherals.hpp
     ${ROOT}/System/gpio.cpp
     ${ROOT}/System/gpio.hpp
+
     ${ROOT}/System/tim6.cpp
     ${ROOT}/System/tim6.hpp
+
     ${ROOT}/System/uartInterface.hpp
     ${ROOT}/System/uartIsrHandler.cpp
     ${ROOT}/System/uart1.cpp
     ${ROOT}/System/uart1.hpp
     ${ROOT}/System/uart2.cpp
     ${ROOT}/System/uart2.hpp
+
     ${ROOT}/System/i2sInterface.hpp
     ${ROOT}/System/i2sIsrHandler.cpp
     ${ROOT}/System/i2s2.cpp
     ${ROOT}/System/i2s2.hpp
 
-    # FibSys (Fibration System)
+    # FibSys (Fibration System) interface level
+
     ${ROOT}/System/FreeRTOSConfig.h # FreeRTOS project specific configuration
     ${ROOT}/System/system.cpp
     ${ROOT}/System/system.hpp
-    ${ROOT}/System/stream.hpp
+
+    ${ROOT}/System/textStreamInterface.hpp
     ${ROOT}/System/uartStream.hpp
     ${ROOT}/System/uartStream.cpp
     ${ROOT}/System/uartStreamer.cpp
