Added support files for F303RE (will later migrate). Now setup for F303CB for my test module.

--- a/Tests/blinkTest/CMakeLists.txt
+++ b/Tests/blinkTest/CMakeLists.txt
@@ -112,7 +112,8 @@ set(SYSTEM_SRC
     ${ROOT}/System/MSP/syscalls.c
     ${ROOT}/System/MSP/sysmem.c
     ${ROOT}/System/MSP/system_stm32f3xx.c
-    ${ROOT}/System/MSP/startup_stm32f303cctx.s
+    #${ROOT}/System/MSP/startup_stm32f303retx.s
+    ${ROOT}/System/MSP/startup_stm32f303cbtx.s
 )
 
 add_executable(${PROJECT_NAME} 
@@ -123,6 +124,7 @@ add_executable(${PROJECT_NAME}
 target_compile_definitions(${PROJECT_NAME} PRIVATE
     -DUSE_HAL_DRIVER
     -DSTM32F303xC
+    #-DSTM32F303xE
 )
 
 target_include_directories(${PROJECT_NAME} PRIVATE 
@@ -184,6 +186,7 @@ target_compile_options(${PROJECT_NAME} PRIVATE
 
 target_link_options(${PROJECT_NAME} PRIVATE
     -T${ROOT}/System/MSP/STM32F303CCTX_FLASH.ld
+    #-T${ROOT}/System/MSP/STM32F303RETX_FLASH.ld
     -mcpu=cortex-m4
     -mthumb
     -mfpu=fpv4-sp-d16
