style: tweak fibsys priorities, rename start to boot.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
+.cortex-debug.peripherals.state.json
+.cortex-debug.registers.state.json
 Build/Debug
 Build/Release
 fib-log.txt
-.vscode/.cortex-debug.*
