refactor: moving stuff around big time

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.13)
 
 project(Fibration)
 
-add_subdirectory(Tests)
-#add_subdirectory(Modules)
+#add_subdirectory(Tests)
+add_subdirectory(Modules)
