--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "System/freertos-addons"]
-	path = System/freertos-addons
+[submodule "Libraries/freertos-addons"]
+	path = Libraries/freertos-addons
 	url = https://github.com/michaelbecker/freertos-addons.git
