--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "Libraries/freertos-addons"]
 	path = Libraries/freertos-addons
 	url = https://github.com/michaelbecker/freertos-addons.git
+
+[submodule "Libraries/min"]
+	path = Libraries/min
+	url = https://github.com/min-protocol/min.git
