--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,21 +1,21 @@
 {
-	// Use IntelliSense to learn about possible attributes.
-	// Hover to view descriptions of existing attributes.
-	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-	"version": "0.2.0",
-	"configurations": [
-		{
-			"name": "blinkTest",
-			"cwd": "${workspaceRoot}",
-			"request": "launch",
-			"type": "cortex-debug",
-			"servertype": "stutil",
-			"cpu": "cortex-m4", 
-			"preLaunchTask": "GNU Debug: blinkTest",
-            "executable": "${workspaceRoot}/Build/Debug/Tests/blinkTest/blinkTest",
-			"svdFile": "${workspaceRoot}/System/MSP/STM32F303.svd",
-			"interface": "swd",
-			"runToMain": true,
-		}     
-	]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Spirale",
+      "cwd": "${workspaceRoot}",
+      "request": "launch",
+      "type": "cortex-debug",
+      "servertype": "stutil",
+      "cpu": "cortex-m4",
+      "preLaunchTask": "GNU Debug: Spirale",
+      "executable": "${workspaceRoot}/Build/Debug/Modules/Spirale/Spirale",
+      "svdFile": "${workspaceRoot}/System/MSP/STM32F303.svd",
+      "interface": "swd",
+      "runToMain": true
+    }
+  ]
 }
