upd: `settings.json`

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,9 @@
 [submodule "Libraries/min"]
 	path = Libraries/min
 	url = https://github.com/min-protocol/min.git
+[submodule "Libraries/TinyFrame"]
+	path = Libraries/TinyFrame
+	url = https://github.com/lukasnee/TinyFrame.git
+[submodule "Libraries/PonyFrame"]
+	path = Libraries/PonyFrame
+	url = https://github.com/lukasnee/PonyFrame.git
