--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,64 +1,65 @@
 {
-    "files.associations": {
-        "*.tcc": "cpp",
-        "string": "cpp",
-        "array": "cpp",
-        "atomic": "cpp",
-        "cctype": "cpp",
-        "clocale": "cpp",
-        "cmath": "cpp",
-        "cstdarg": "cpp",
-        "cstddef": "cpp",
-        "cstdint": "cpp",
-        "cstdio": "cpp",
-        "cstdlib": "cpp",
-        "cwchar": "cpp",
-        "cwctype": "cpp",
-        "deque": "cpp",
-        "unordered_map": "cpp",
-        "vector": "cpp",
-        "exception": "cpp",
-        "algorithm": "cpp",
-        "functional": "cpp",
-        "iterator": "cpp",
-        "memory": "cpp",
-        "memory_resource": "cpp",
-        "numeric": "cpp",
-        "optional": "cpp",
-        "random": "cpp",
-        "string_view": "cpp",
-        "system_error": "cpp",
-        "tuple": "cpp",
-        "type_traits": "cpp",
-        "utility": "cpp",
-        "fstream": "cpp",
-        "initializer_list": "cpp",
-        "iosfwd": "cpp",
-        "istream": "cpp",
-        "limits": "cpp",
-        "new": "cpp",
-        "ostream": "cpp",
-        "sstream": "cpp",
-        "stdexcept": "cpp",
-        "streambuf": "cpp",
-        "typeinfo": "cpp",
-        "cerrno": "cpp",
-        "climits": "cpp",
-        "ios": "cpp",
-        "queue": "cpp",
-        "mutex": "cpp",
-        "chrono": "cpp",
-        "condition_variable": "cpp",
-        "ctime": "cpp",
-        "ratio": "cpp",
-        "thread": "cpp",
-        "*.hppdelete": "cpp",
-        "thread_delete": "cpp",
-        "cstring": "cpp",
-        "list": "cpp",
-        "iostream": "cpp",
-        "map": "cpp"
-    },
-	"cmake.configureOnOpen": true,
-	"C_Cpp.errorSquiggles": "Disabled"
+  "files.associations": {
+    "*.tcc": "cpp",
+    "string": "cpp",
+    "array": "cpp",
+    "atomic": "cpp",
+    "cctype": "cpp",
+    "clocale": "cpp",
+    "cmath": "cpp",
+    "cstdarg": "cpp",
+    "cstddef": "cpp",
+    "cstdint": "cpp",
+    "cstdio": "cpp",
+    "cstdlib": "cpp",
+    "cwchar": "cpp",
+    "cwctype": "cpp",
+    "deque": "cpp",
+    "unordered_map": "cpp",
+    "vector": "cpp",
+    "exception": "cpp",
+    "algorithm": "cpp",
+    "functional": "cpp",
+    "iterator": "cpp",
+    "memory": "cpp",
+    "memory_resource": "cpp",
+    "numeric": "cpp",
+    "optional": "cpp",
+    "random": "cpp",
+    "string_view": "cpp",
+    "system_error": "cpp",
+    "tuple": "cpp",
+    "type_traits": "cpp",
+    "utility": "cpp",
+    "fstream": "cpp",
+    "initializer_list": "cpp",
+    "iosfwd": "cpp",
+    "istream": "cpp",
+    "limits": "cpp",
+    "new": "cpp",
+    "ostream": "cpp",
+    "sstream": "cpp",
+    "stdexcept": "cpp",
+    "streambuf": "cpp",
+    "typeinfo": "cpp",
+    "cerrno": "cpp",
+    "climits": "cpp",
+    "ios": "cpp",
+    "queue": "cpp",
+    "mutex": "cpp",
+    "chrono": "cpp",
+    "condition_variable": "cpp",
+    "ctime": "cpp",
+    "ratio": "cpp",
+    "thread": "cpp",
+    "*.hppdelete": "cpp",
+    "thread_delete": "cpp",
+    "cstring": "cpp",
+    "list": "cpp",
+    "iostream": "cpp",
+    "map": "cpp"
+  },
+  "cmake.configureOnOpen": true,
+  "C_Cpp.errorSquiggles": "Enabled",
+  "python.pythonPath": "/usr/bin/python3"
 }
